fix padding problems on tops of quizzes.
when viewing quiz results, the first question had a large gap
above it. this fixes it by positioning the left-nav absolutely
on quiz pages.

Reviewed-on: https://gerrit.instructure.com/13295
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/stylesheets/quizzes.sass
+++ b/app/stylesheets/quizzes.sass
@@ -1104,3 +1104,6 @@ ul#quiz_versions
       /* Display persistent correct answer arrow when editing only. */
       &.selectable .form_answers .answer.correct_answer .answer_select .answer_box
         background: url(/images/correct_answer.png) no-repeat 3px 5px
+
+#left-side
+  position: absolute
